// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lastCalledWith works only on spies or jest.fn 1`] = `
"expect(<red>jest.fn()</>)[.not].lastCalledWith()

<red>jest.fn()</> value must be a mock function or spy.
Received:
  function: <red>[Function fn]</>"
`;

exports[`lastCalledWith works with jest.fn and arguments that don't match 1`] = `
"expect(<red>jest.fn()</>).lastCalledWith(<green>expected</>)

Expected mock function to have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was last called with:
  <red>[\\"foo\\", \\"bar1\\"]</>"
`;

exports[`lastCalledWith works with jest.fn and arguments that match 1`] = `
"expect(<red>jest.fn()</>).not.lastCalledWith(<green>expected</>)

Expected mock function to not have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`lastCalledWith works with jest.fn and many arguments 1`] = `
"expect(<red>jest.fn()</>).not.lastCalledWith(<green>expected</>)

Expected mock function to not have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`lastCalledWith works with jest.fn and many arguments that don't match 1`] = `
"expect(<red>jest.fn()</>).lastCalledWith(<green>expected</>)

Expected mock function to have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was last called with:
  <red>[\\"foo\\", \\"bar3\\"]</>
and <red>two more calls</>."
`;

exports[`lastCalledWith works with jest.fn when not called 1`] = `
"expect(<red>jest.fn()</>).lastCalledWith(<green>expected</>)

Expected mock function to have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was <red>not called</>."
`;

exports[`toBeCalled works only on spies or jest.fn 1`] = `
"expect(<red>jest.fn()</>)[.not].toBeCalled()

<red>jest.fn()</> value must be a mock function or spy.
Received:
  function: <red>[Function fn]</>"
`;

exports[`toBeCalled works with jasmine.createSpy 1`] = `
"expect(<red>spy</>).toBeCalled()

Expected spy to have been called."
`;

exports[`toBeCalled works with jasmine.createSpy 2`] = `
"expect(<red>spy</>).not.toBeCalled()

Expected spy not to be called but it was called with:
  <red>Array []</>"
`;

exports[`toBeCalled works with jasmine.createSpy 3`] = `
"expect(<red>received</>)[.not].toBeCalled()

Matcher does not accept any arguments.
Got:
  number: <green>555</>"
`;

exports[`toBeCalled works with jest.fn 1`] = `
"expect(<red>jest.fn()</>).toBeCalled()

Expected mock function to have been called."
`;

exports[`toBeCalled works with jest.fn 2`] = `
"expect(<red>jest.fn()</>).not.toBeCalled()

Expected mock function not to be called but it was called with:
  <red>Array []</>"
`;

exports[`toBeCalled works with jest.fn 3`] = `
"expect(<red>received</>)[.not].toBeCalled()

Matcher does not accept any arguments.
Got:
  number: <green>555</>"
`;

exports[`toBeCalledWith works only on spies or jest.fn 1`] = `
"expect(<red>jest.fn()</>)[.not].toBeCalledWith()

<red>jest.fn()</> value must be a mock function or spy.
Received:
  function: <red>[Function fn]</>"
`;

exports[`toBeCalledWith works with jest.fn and arguments that don't match 1`] = `
"expect(<red>jest.fn()</>).toBeCalledWith(<green>expected</>)

Expected mock function to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was called with:
  <red>[\\"foo\\", \\"bar1\\"]</>"
`;

exports[`toBeCalledWith works with jest.fn and arguments that match 1`] = `
"expect(<red>jest.fn()</>).not.toBeCalledWith(<green>expected</>)

Expected mock function not to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toBeCalledWith works with jest.fn and many arguments 1`] = `
"expect(<red>jest.fn()</>).not.toBeCalledWith(<green>expected</>)

Expected mock function not to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toBeCalledWith works with jest.fn and many arguments that don't match 1`] = `
"expect(<red>jest.fn()</>).toBeCalledWith(<green>expected</>)

Expected mock function to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was called with:
  <red>[\\"foo\\", \\"bar3\\"]</>, <red>[\\"foo\\", \\"bar2\\"]</>, <red>[\\"foo\\", \\"bar1\\"]</>"
`;

exports[`toBeCalledWith works with jest.fn when not called 1`] = `
"expect(<red>jest.fn()</>).toBeCalledWith(<green>expected</>)

Expected mock function to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was <red>not called</>."
`;

exports[`toHaveBeenCalled works only on spies or jest.fn 1`] = `
"expect(<red>jest.fn()</>)[.not].toHaveBeenCalled()

<red>jest.fn()</> value must be a mock function or spy.
Received:
  function: <red>[Function fn]</>"
`;

exports[`toHaveBeenCalled works with jasmine.createSpy 1`] = `
"expect(<red>spy</>).toHaveBeenCalled()

Expected spy to have been called."
`;

exports[`toHaveBeenCalled works with jasmine.createSpy 2`] = `
"expect(<red>spy</>).not.toHaveBeenCalled()

Expected spy not to be called but it was called with:
  <red>Array []</>"
`;

exports[`toHaveBeenCalled works with jasmine.createSpy 3`] = `
"expect(<red>received</>)[.not].toHaveBeenCalled()

Matcher does not accept any arguments.
Got:
  number: <green>555</>"
`;

exports[`toHaveBeenCalled works with jest.fn 1`] = `
"expect(<red>jest.fn()</>).toHaveBeenCalled()

Expected mock function to have been called."
`;

exports[`toHaveBeenCalled works with jest.fn 2`] = `
"expect(<red>jest.fn()</>).not.toHaveBeenCalled()

Expected mock function not to be called but it was called with:
  <red>Array []</>"
`;

exports[`toHaveBeenCalled works with jest.fn 3`] = `
"expect(<red>received</>)[.not].toHaveBeenCalled()

Matcher does not accept any arguments.
Got:
  number: <green>555</>"
`;

exports[`toHaveBeenCalledTimes accepts only numbers 1`] = `
"expect(<red>received</>)[.not].toHaveBeenCalledTimes(<green>expected</>)

Expected value must be a number.
Got:
  object: <green>{}</>"
`;

exports[`toHaveBeenCalledTimes accepts only numbers 2`] = `
"expect(<red>received</>)[.not].toHaveBeenCalledTimes(<green>expected</>)

Expected value must be a number.
Got:
  array: <green>Array []</>"
`;

exports[`toHaveBeenCalledTimes accepts only numbers 3`] = `
"expect(<red>received</>)[.not].toHaveBeenCalledTimes(<green>expected</>)

Expected value must be a number.
Got:
  boolean: <green>true</>"
`;

exports[`toHaveBeenCalledTimes accepts only numbers 4`] = `
"expect(<red>received</>)[.not].toHaveBeenCalledTimes(<green>expected</>)

Expected value must be a number.
Got:
  string: <green>\\"a\\"</>"
`;

exports[`toHaveBeenCalledTimes accepts only numbers 5`] = `
"expect(<red>received</>)[.not].toHaveBeenCalledTimes(<green>expected</>)

Expected value must be a number.
Got:
  map: <green>Map {}</>"
`;

exports[`toHaveBeenCalledTimes accepts only numbers 6`] = `
"expect(<red>received</>)[.not].toHaveBeenCalledTimes(<green>expected</>)

Expected value must be a number.
Got:
  function: <green>[Function anonymous]</>"
`;

exports[`toHaveBeenCalledTimes fails if function called less than expected times 1`] = `
"expect(<red>spy</>).toHaveBeenCalledTimes(<green>2</>)

Expected spy to have been called <green>two times</>, but it was called <red>one time</>."
`;

exports[`toHaveBeenCalledTimes fails if function called more than expected times 1`] = `
"expect(<red>spy</>).toHaveBeenCalledTimes(<green>2</>)

Expected spy to have been called <green>two times</>, but it was called <red>three times</>."
`;

exports[`toHaveBeenCalledTimes passes if function called equal to expected times 1`] = `
"expect(<red>spy</>).not.toHaveBeenCalledTimes(<green>2</>)

Expected spy not to be called <green>two times</>, but it was called exactly <red>two times</>."
`;

exports[`toHaveBeenCalledTimes verifies that actual is a Spy 1`] = `
"expect(<red>jest.fn()</>)[.not].toHaveBeenCalledTimes()

<red>jest.fn()</> value must be a mock function or spy.
Received:
  function: <red>[Function fn]</>"
`;

exports[`toHaveBeenCalledWith works only on spies or jest.fn 1`] = `
"expect(<red>jest.fn()</>)[.not].toHaveBeenCalledWith()

<red>jest.fn()</> value must be a mock function or spy.
Received:
  function: <red>[Function fn]</>"
`;

exports[`toHaveBeenCalledWith works with jasmine.createSpy and arguments that don't match 1`] = `
"expect(<red>spy</>).toHaveBeenCalledWith(<green>expected</>)

Expected spy to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was called with:
  <red>[\\"foo\\", \\"bar1\\"]</>"
`;

exports[`toHaveBeenCalledWith works with jasmine.createSpy and arguments that match 1`] = `
"expect(<red>spy</>).not.toHaveBeenCalledWith(<green>expected</>)

Expected spy not to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toHaveBeenCalledWith works with jasmine.createSpy and many arguments 1`] = `
"expect(<red>spy</>).not.toHaveBeenCalledWith(<green>expected</>)

Expected spy not to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toHaveBeenCalledWith works with jasmine.createSpy and many arguments that don't match 1`] = `
"expect(<red>spy</>).toHaveBeenCalledWith(<green>expected</>)

Expected spy to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was called with:
  <red>[\\"foo\\", \\"bar3\\"]</>, <red>[\\"foo\\", \\"bar2\\"]</>, <red>[\\"foo\\", \\"bar1\\"]</>"
`;

exports[`toHaveBeenCalledWith works with jasmine.createSpy when not called 1`] = `
"expect(<red>spy</>).toHaveBeenCalledWith(<green>expected</>)

Expected spy to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was <red>not called</>."
`;

exports[`toHaveBeenCalledWith works with jest.fn and arguments that don't match 1`] = `
"expect(<red>jest.fn()</>).toHaveBeenCalledWith(<green>expected</>)

Expected mock function to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was called with:
  <red>[\\"foo\\", \\"bar1\\"]</>"
`;

exports[`toHaveBeenCalledWith works with jest.fn and arguments that match 1`] = `
"expect(<red>jest.fn()</>).not.toHaveBeenCalledWith(<green>expected</>)

Expected mock function not to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toHaveBeenCalledWith works with jest.fn and many arguments 1`] = `
"expect(<red>jest.fn()</>).not.toHaveBeenCalledWith(<green>expected</>)

Expected mock function not to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toHaveBeenCalledWith works with jest.fn and many arguments that don't match 1`] = `
"expect(<red>jest.fn()</>).toHaveBeenCalledWith(<green>expected</>)

Expected mock function to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was called with:
  <red>[\\"foo\\", \\"bar3\\"]</>, <red>[\\"foo\\", \\"bar2\\"]</>, <red>[\\"foo\\", \\"bar1\\"]</>"
`;

exports[`toHaveBeenCalledWith works with jest.fn when not called 1`] = `
"expect(<red>jest.fn()</>).toHaveBeenCalledWith(<green>expected</>)

Expected mock function to have been called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was <red>not called</>."
`;

exports[`toHaveBeenLastCalledWith works only on spies or jest.fn 1`] = `
"expect(<red>jest.fn()</>)[.not].toHaveBeenLastCalledWith()

<red>jest.fn()</> value must be a mock function or spy.
Received:
  function: <red>[Function fn]</>"
`;

exports[`toHaveBeenLastCalledWith works with jasmine.createSpy and arguments that don't match 1`] = `
"expect(<red>spy</>).toHaveBeenLastCalledWith(<green>expected</>)

Expected spy to have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was last called with:
  <red>[\\"foo\\", \\"bar1\\"]</>"
`;

exports[`toHaveBeenLastCalledWith works with jasmine.createSpy and arguments that match 1`] = `
"expect(<red>spy</>).not.toHaveBeenLastCalledWith(<green>expected</>)

Expected spy to not have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toHaveBeenLastCalledWith works with jasmine.createSpy and many arguments 1`] = `
"expect(<red>spy</>).not.toHaveBeenLastCalledWith(<green>expected</>)

Expected spy to not have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toHaveBeenLastCalledWith works with jasmine.createSpy and many arguments that don't match 1`] = `
"expect(<red>spy</>).toHaveBeenLastCalledWith(<green>expected</>)

Expected spy to have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was last called with:
  <red>[\\"foo\\", \\"bar3\\"]</>
and <red>two more calls</>."
`;

exports[`toHaveBeenLastCalledWith works with jasmine.createSpy when not called 1`] = `
"expect(<red>spy</>).toHaveBeenLastCalledWith(<green>expected</>)

Expected spy to have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was <red>not called</>."
`;

exports[`toHaveBeenLastCalledWith works with jest.fn and arguments that don't match 1`] = `
"expect(<red>jest.fn()</>).toHaveBeenLastCalledWith(<green>expected</>)

Expected mock function to have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was last called with:
  <red>[\\"foo\\", \\"bar1\\"]</>"
`;

exports[`toHaveBeenLastCalledWith works with jest.fn and arguments that match 1`] = `
"expect(<red>jest.fn()</>).not.toHaveBeenLastCalledWith(<green>expected</>)

Expected mock function to not have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toHaveBeenLastCalledWith works with jest.fn and many arguments 1`] = `
"expect(<red>jest.fn()</>).not.toHaveBeenLastCalledWith(<green>expected</>)

Expected mock function to not have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>"
`;

exports[`toHaveBeenLastCalledWith works with jest.fn and many arguments that don't match 1`] = `
"expect(<red>jest.fn()</>).toHaveBeenLastCalledWith(<green>expected</>)

Expected mock function to have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was last called with:
  <red>[\\"foo\\", \\"bar3\\"]</>
and <red>two more calls</>."
`;

exports[`toHaveBeenLastCalledWith works with jest.fn when not called 1`] = `
"expect(<red>jest.fn()</>).toHaveBeenLastCalledWith(<green>expected</>)

Expected mock function to have been last called with:
  <green>[\\"foo\\", \\"bar\\"]</>
But it was <red>not called</>."
`;
